--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,6 +10,7 @@
 	
 	<form action="/login" method="post">
 		<input type="text" name="name" placeholder="名前">
+		<input type="text" name="name" placeholder="ユーザID">
 		<input type="text" name="password" placeholder="パスワード">
 		<button>ログイン</button>
 	</form>
