--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,8 +5,9 @@
 <title>ログイン</title>
 </head>
 <body>
-
+	<header>
 	<h1>健康管理アプリ</h1>
+	</header>
 	
 	<form action="/login" method="post">
 		<input type="text" name="name" placeholder="名前">
