--- a/src/main/resources/templates/accountForm.html
+++ b/src/main/resources/templates/accountForm.html
@@ -11,7 +11,7 @@
 	
 	<main>
 		<h3>お客様情報</h3>
-		<form action="/account/add" method="post">
+		<form action="/account" method="post">
 		
 		<table border="1">
 				<tr>
