--- a/src/main/resources/templates/choice.html
+++ b/src/main/resources/templates/choice.html
@@ -11,8 +11,9 @@
 			<th>食品名・材料</th>
 		</tr>
 		<tr th:each="food:${foods}">
-			<td>[[${food.name}]]</td>
+			<td><a href="/main" style="padding-left: 10px;">[[${food.name}]]</a></td>
 		</tr>
+		
 	</table>
 	</main>
 </body>
