--- a/src/main/resources/templates/choice.html
+++ b/src/main/resources/templates/choice.html
@@ -12,8 +12,7 @@
 		</tr>
 		
 		<tr th:each="food:${foods}">
-			<form th:action="|/choice/${food.id}|"  method="POST">
-			<td><a href="/main" style="padding-left: 10px;">[[${food.name}]]</a></td>
+			<td><a th:href="|/choice/regist?foodId=${food.id}|" style="padding-left: 10px;">[[${food.name}]]</a></td>
 		</tr>
 		
 	</table>
