--- a/src/main/resources/templates/choice.html
+++ b/src/main/resources/templates/choice.html
@@ -4,7 +4,9 @@
 <meta charset="UTF-8">
 <title>食べたもの登録</title>
 </head>
+<link rel="stylesheet" type="text/css" href="/css/style.css">
 <body>	
+		<header th:replace="header"></header>
 	<main>
 		<table border="1">
 		<tr>
@@ -17,5 +19,6 @@
 		
 	</table>
 	</main>
+	<footer th:replace="footer"></footer>
 </body>
 </html>
