--- a/src/main/resources/templates/accountForm.html
+++ b/src/main/resources/templates/accountForm.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>会員登録</title>
+<link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
 	<header>
@@ -47,6 +48,6 @@
 			<button>登録</button>
 		</form>
 	</main>
-	
+	<footer th:replace="footer"></footer>
 </body>
 </html>
