--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>ログイン</title>
 </head>
+<link rel="stylesheet" type="text/css" href="/css/style.css">
 <body>
 	<header>
 	<h1>健康管理アプリ</h1>
@@ -25,5 +26,6 @@
 	<form action="/account" method="get">
 		<input type="submit" value="会員登録はこちら">
 	</form>
+	<footer th:replace="footer"></footer>
 </body>
 </html>
