--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -17,11 +17,11 @@
 	<table border="1">
 		<tr>
 			<th>食品名・材料</th>
-			<th>炭水化物</th>
-			<th>タンパク質</th>
-			<th>脂質</th>
-			<th>ビタミン</th>
-			<th>ミネラル</th>
+			<th>炭水化物(g)</th>
+			<th>タンパク質(g)</th>
+			<th>脂質(g)</th>
+			<th>ビタミン(μg)</th>
+			<th>ミネラル(mg)</th>
 		</tr>
 		<tr th:each="food:${histories}">
 			<td>[[${food.name}]]</td>
@@ -40,14 +40,14 @@
 			<td>[[${total5}]]</td>
 		</tr>
 	</table>
-	
+	<br>
 	<table border="1">
 		<tr>
-			<th>炭水化物</th>
-			<th>タンパク質</th>
-			<th>脂質</th>
-			<th>ビタミン</th>
-			<th>ミネラル</th>
+			<th>炭水化物(g)</th>
+			<th>タンパク質(g)</th>
+			<th>脂質(g)</th>
+			<th>ビタミン(μg)</th>
+			<th>ミネラル(mg)</th>
 		</tr>
 		<tr>
 			<td>[[${gap[0]}]]</td>
