--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -15,27 +15,27 @@
 					<td><input type="text" name="name"></td>
 				</tr>
 				<tr>
-					<th>炭水化物</th>
+					<th>炭水化物(g)</th>
 					<td><input type="text" name="carbohydrates"></td>
 				</tr>
 				
 				<tr>
-					<th>タンパク質</th>
+					<th>タンパク質(g)</th>
 					<td><input type="text" name="protein"></td>
 				</tr>
 				
 				<tr>
-					<th>脂質</th>
+					<th>脂質(g)</th>
 					<td><input type="text" name="lipid"></td>
 				</tr>
 				
 				<tr>
-					<th>ビタミン</th>
+					<th>ビタミン(μg)</th>
 					<td><input type="text" name="vitamin"></td>
 				</tr>
 				
 				<tr>
-					<th>ミネラル</th>
+					<th>ミネラル(mg)</th>
 					<td><input type="text" name="mineral"></td>
 				</tr>
 			</table>
@@ -49,27 +49,27 @@
 					<td><input type="text" name="name"></td>
 				</tr>
 				<tr>
-					<th>炭水化物</th>
+					<th>炭水化物(g)</th>
 					<td><input type="text" name="carbohydrates"></td>
 				</tr>
 				
 				<tr>
-					<th>タンパク質</th>
+					<th>タンパク質(g)</th>
 					<td><input type="text" name="protein"></td>
 				</tr>
 				
 				<tr>
-					<th>脂質</th>
+					<th>脂質(g)</th>
 					<td><input type="text" name="lipid"></td>
 				</tr>
 				
 				<tr>
-					<th>ビタミン</th>
+					<th>ビタミン(μg)</th>
 					<td><input type="text" name="vitamin"></td>
 				</tr>
 				
 				<tr>
-					<th>ミネラル</th>
+					<th>ミネラル(mg)</th>
 					<td><input type="text" name="mineral"></td>
 				</tr>
 			</table>
