--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,7 +21,7 @@
 		<br>
 		<input type="text" name="password" placeholder="パスワード" th:value="${password}">
 		<br>
-		<button>ログイン</button>
+		<button class="btn-gradient-radius">ログイン</button>
 	</form>
 	<form action="/account" method="get">
 		<input type="submit" value="会員登録はこちら">
