--- a/src/main/resources/templates/week.html
+++ b/src/main/resources/templates/week.html
@@ -7,27 +7,21 @@
 <link rel="stylesheet" type="text/css" href="/css/style.css">
 <body>
 		<header th:replace="header"></header>
-	<a th:href="" th:each="category:${categories}">[[${category.name}]]<br></a>
-	
-<!--	<table border="1">-->
-<!--		<tr>-->
-<!--			<th>食品名・材料</th>-->
-<!--			<th>名前</th>-->
-<!--			<th>炭水化物</th>-->
-<!--			<th>タンパク質</th>-->
-<!--			<th>脂質</th>-->
-<!--			<th>ビタミン</th>-->
-<!--			<th>ミネラル</th>-->
-<!--		</tr>-->
-<!--		<tr th:each="food:${histories}">-->
-<!--			<td>[[${food.name}]]</td>-->
-<!--			<td>[[${food.carbohydrates}]]</td>-->
-<!--			<td>[[${food.protein}]]</td>-->
-<!--			<td>[[${food.lipid}]]</td>-->
-<!--			<td>[[${food.vitamin}]]</td>-->
-<!--			<td>[[${food.mineral}]]</td>-->
-<!--		</tr>-->
-<!--	</table>-->
+		
+		<th:block th:each="history:${histories}">
+		<table border="1">
+			<th:block th:each="h, c:${history}">
+			<tr th:if="${c.index} == 0">
+				<th>[[${h.day}]]</th>
+			</tr>
+			<tr>
+				<td>[[${h.name}]]</td>
+			</tr>
+		</table>
+		<br>
+		    </th:block>
+		</th:block>
+		
 	<footer th:replace="footer"></footer>
 </body>
 </html>
