--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -19,7 +19,15 @@
 		th:href="|/choice?categoryId=${category.id}|">
 		[[${category.name}]]</a>
 	</div>
-	<table border="1">
+	<style>
+	table1 {
+	width: 45%;
+	margin-left: 100px;
+	margin-top: 30px;
+	margin-bottom: 10px;
+	}
+</style>
+	<table border="1" class="eiyou">
 		<tr>
 			<th>食品名・材料</th>
 			<th>炭水化物(g)</th>
@@ -46,7 +54,7 @@
 		</tr>
 	</table>
 	<br>
-	<table border="1">
+	<table border="1" class="eiyou">
 		<tr>
 			<th>炭水化物(g)</th>
 			<th>タンパク質(g)</th>
