--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -9,7 +9,7 @@
 			<header th:replace="header"></header>
 	<main>
 		<form action="/menu/add" method="post">
-		<table border="1">
+		<table border="1" class="3">
 				<tr>
 					<th>料理名</th>
 					<td><input type="text" name="name"></td>
