グラフ　平井健一

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -72,7 +72,7 @@
 	</table>
 	<div class="message">
     <span class="box-title">Comment</span>
-    <p><img th:src="${fos}"></p>
+    <p><img th:src="${dataUri}"></p>
 	</div>
 </div>
 	<footer th:replace="footer"></footer>
