--- a/src/main/resources/templates/recommend.html
+++ b/src/main/resources/templates/recommend.html
@@ -10,6 +10,9 @@
 	<header th:replace="header"></header>
 		
 	<form action="/recommend" method="post">
+		
+	<div class="recommend-choice">
+	<div class="select">
 	食べたいジャンル<br>
 	<select name="genre">
 		<option value="01">こだわらない</option>
@@ -17,14 +20,18 @@
 		<option value="03">洋食</option>
 		<option value="04">中華</option>
 	</select>
+	</div>
 	<br>
+		<div class="select">
 	食べたいもの<br>
-	<select>
+	<select name="type">
 		<option value="11">こだわらない</option>
 		<option value="12">あっさり</option>
 		<option value="13">がっつり</option>
 	</select>
+	</div>
 	<br>
+	<div class="select">
 	献立種類<br>
 	<select name="sort">
 		<option value="21">カロリー低めの献立</option>
@@ -36,6 +43,8 @@
 		<option value="27">秋が旬の献立</option>
 		<option value="28">冬が旬の献立</option>
 	</select>
+	</div>
+	</div>
 	<input type="submit" value="献立検索">
 	</form>
 	
