--- a/src/main/resources/templates/accountForm.html
+++ b/src/main/resources/templates/accountForm.html
@@ -17,15 +17,32 @@
 		<table class="account" border="1">
 				<tr>
 					<th>お名前</th>
-					<td><input type="text" name="name"  class="text1"></td>
+					<td>
+						<th:blovk>
+							<span style="color: red;">[[${message1}]]</span>
+						</th:blovk>
+						<input type="text" name="name"  class="text1" placeholder="(例)山田太郎" th:value="${name}" required>
+					</td>
 				</tr>
 				<tr>
-					<th>電話番号</th>
-					<td><input type="text" name="tel"  class="text1"></td>
+					<th>携帯電話番号<br>
+						※ハイフン(-)の入力は不要です
+					</th>
+					<td>
+						<th:blovk>
+							<span style="color: red;">[[${message2}]]</span>
+						</th:blovk>
+						<input type="text" name="tel"  class="text1" placeholder="(例)09012341234" th:value="${tel}" required>
+					</td>
 				</tr>
 				
 				<tr><th>e-mail</th>
-					<td><input type="text" name="email"  class="text1"></td>
+					<td>
+						<th:blovk>
+							<span style="color: red;">[[${message3}]]</span>
+						</th:blovk>
+						<input type="text" name="email"  class="text1" placeholder="(例)account@example.com" th:value="${email}" required>
+					</td>
 				</tr>
 				
 				<tr>
@@ -38,12 +55,155 @@
 				
 				<tr>
 					<th>年齢</th>
-					<td><input type="text" name="age"  class="text1"></td>
+					<td>
+						<th:blovk>
+							<span style="color: red;">[[${message4}]]</span>
+						</th:blovk>
+						<select name="ageYear"  class="text1" th:value="ageYear">
+							<Option value="0">ー</Option>
+							<Option value="1950">1950</Option>
+							<Option value="1951">1951</Option>
+							<Option value="1952">1952</Option>
+							<Option value="1953">1953</Option>
+							<Option value="1954">1954</Option>
+							<Option value="1955">1955</Option>
+							<Option value="1956">1956</Option>
+							<Option value="1957">1957</Option>
+							<Option value="1958">1958</Option>
+							<Option value="1959">1959</Option>
+							<Option value="1960">1960</Option>
+							<Option value="1961">1961</Option>
+							<Option value="1962">1962</Option>
+							<Option value="1963">1963</Option>
+							<Option value="1964">1964</Option>
+							<Option value="1965">1965</Option>
+							<Option value="1966">1966</Option>
+							<Option value="1967">1967</Option>
+							<Option value="1968">1968</Option>
+							<Option value="1969">1969</Option>
+							<Option value="1970">1970</Option>
+							<Option value="1971">1971</Option>
+							<Option value="1972">1972</Option>
+							<Option value="1973">1973</Option>
+							<Option value="1974">1974</Option>
+							<Option value="1975">1975</Option>
+							<Option value="1976">1976</Option>
+							<Option value="1977">1977</Option>
+							<Option value="1978">1978</Option>
+							<Option value="1979">1979</Option>
+							<Option value="1980">1980</Option>
+							<Option value="1981">1981</Option>
+							<Option value="1982">1982</Option>
+							<Option value="1983">1983</Option>
+							<Option value="1984">1984</Option>
+							<Option value="1985">1985</Option>
+							<Option value="1986">1986</Option>
+							<Option value="1987">1987</Option>
+							<Option value="1988">1988</Option>
+							<Option value="1989">1989</Option>
+							<Option value="1990">1990</Option>
+							<Option value="1991">1991</Option>
+							<Option value="1992">1992</Option>
+							<Option value="1993">1993</Option>
+							<Option value="1994">1994</Option>
+							<Option value="1995">1995</Option>
+							<Option value="1996">1996</Option>
+							<Option value="1997">1997</Option>
+							<Option value="1998">1998</Option>
+							<Option value="1999">1999</Option>
+							<Option value="2000">2000</Option>
+							<Option value="2001">2001</Option>
+							<Option value="2002">2002</Option>
+							<Option value="2003">2003</Option>
+							<Option value="2004">2004</Option>
+							<Option value="2005">2005</Option>
+							<Option value="2006">2006</Option>
+							<Option value="2007">2007</Option>
+							<Option value="2008">2008</Option>
+							<Option value="2009">2009</Option>
+							<Option value="2010">2010</Option>
+							<Option value="2011">2011</Option>
+							<Option value="2012">2012</Option>
+							<Option value="2013">2013</Option>
+							<Option value="2014">2014</Option>
+							<Option value="2015">2015</Option>
+						</select>
+						年
+						<select name="ageMonth"  class="text1">
+							<Option value="0">ー</Option>
+							<Option value="01">01</Option>
+							<Option value="02">02</Option>
+							<Option value="03">03</Option>
+							<Option value="04">04</Option>
+							<Option value="05">05</Option>
+							<Option value="06">06</Option>
+							<Option value="07">07</Option>
+							<Option value="08">08</Option>
+							<Option value="09">09</Option>
+							<Option value="10">10</Option>
+							<Option value="11">11</Option>
+							<Option value="12">12</Option>
+						</select>
+						月
+						<select name="ageDay" class="text1">
+							<Option value="0">ー</Option>
+							<Option value="01">01</Option>
+							<Option value="02">02</Option>
+							<Option value="03">03</Option>
+							<Option value="04">04</Option>
+							<Option value="05">05</Option>
+							<Option value="06">06</Option>
+							<Option value="07">07</Option>
+							<Option value="08">08</Option>
+							<Option value="09">09</Option>
+							<Option value="10">10</Option>
+							<Option value="11">11</Option>
+							<Option value="12">12</Option>
+							<Option value="13">13</Option>
+							<Option value="14">14</Option>
+							<Option value="15">15</Option>
+							<Option value="16">16</Option>
+							<Option value="17">17</Option>
+							<Option value="18">18</Option>
+							<Option value="19">19</Option>
+							<Option value="20">20</Option>
+							<Option value="21">21</Option>
+							<Option value="22">22</Option>
+							<Option value="23">23</Option>
+							<Option value="24">24</Option>
+							<Option value="25">25</Option>
+							<Option value="26">26</Option>
+							<Option value="27">27</Option>
+							<Option value="28">28</Option>
+							<Option value="29">29</Option>
+							<Option value="30">30</Option>
+							<Option value="31">31</Option>
+						</select>
+						日
+					</td>
+					
 				</tr>
 				
-				<tr><th>パスワード</th>
-					<td><input type="text" name="password"  class="text1"></td>
+				<tr>
+					<th>パスワード</th>
+					<td>
+						<th:blovk>
+							<span style="color: red;">[[${message5}]]</span>
+						</th:blovk>
+						<input type="password" name="password1" class="text1" required>
+					</td>
 				</tr>
+				
+				<tr>
+					<th>パスワード（確認用）</th>
+					<td>
+						<th:blovk>
+							<span style="color: red;">[[${message6}]]</span>
+						</th:blovk>
+						<input type="password" name="password2" class="text1" required>
+					</td>
+				</tr>
+				
 			</table>
 			<button>登録</button>
 		</form>
