--- a/src/main/resources/templates/recommend.html
+++ b/src/main/resources/templates/recommend.html
@@ -13,8 +13,8 @@
 		
 	<div class="recommend-choice">
 	<div class="select">
-	食べたいジャンル<br>
-	<select name="genre">
+	食べたいジャンル
+	<select name="genre" class="aaaa">
 		<option value="01">こだわらない</option>
 		<option value="02">和食</option>
 		<option value="03">洋食</option>
@@ -23,8 +23,8 @@
 	</div>
 	<br>
 		<div class="select">
-	食べたいもの<br>
-	<select name="type">
+	食べたいもの
+	<select name="type" class="aaaa">
 		<option value="11">こだわらない</option>
 		<option value="12">あっさり</option>
 		<option value="13">がっつり</option>
@@ -32,8 +32,8 @@
 	</div>
 	<br>
 	<div class="select">
-	献立種類<br>
-	<select name="sort">
+	献立種類
+	<select name="sort" class="aaaa">
 		<option value="21">カロリー低めの献立</option>
 		<option value="22">一人暮らしの献立</option>
 		<option value="23">麺料理の献立</option>
@@ -45,7 +45,7 @@
 	</select>
 	</div>
 	</div>
-	<input type="submit" value="献立検索">
+	<input type="submit" value="献立検索" class="recommend">
 	</form>
 	
 	<footer th:replace="footer"></footer>
