--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -19,15 +19,9 @@
 		th:href="|/choice?categoryId=${category.id}|">
 		[[${category.name}]]</a>
 	</div>
-	<style>
-	table1 {
-	width: 45%;
-	margin-left: 100px;
-	margin-top: 30px;
-	margin-bottom: 10px;
-	}
-</style>
-	<table border="1" class="eiyou">
+	
+	<div class="roll">
+	<table border="1" class="eiyou1" >
 		<tr>
 			<th>食品名・材料</th>
 			<th>炭水化物(g)</th>
@@ -53,8 +47,10 @@
 			<td>[[${total5}]]</td>
 		</tr>
 	</table>
+	</div>
+	
 	<br>
-	<table border="1" class="eiyou">
+	<table border="1" class="eiyou2">
 		<tr>
 			<th>炭水化物(g)</th>
 			<th>タンパク質(g)</th>
