--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -1,4 +1,8 @@
 <footer>
 	<hr>
 	<small>&copy; 健康管理サイト</small>
+	<div>
+	<a href="">ついった</a><img src="Twitter-Logo-2010.jpeg">
+	<a href="">いんすた</a><img src="Twitter-Logo-2010.jpeg">
+	</div>
 </footer>
