--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -23,6 +23,9 @@
 	<div class="roll">
 	<table border="1" class="eiyou1" >
 		<tr>
+			<th colspan="6" class="daimei">今日の栄養素</th>
+		</tr>
+		<tr>
 			<th>食品名・材料</th>
 			<th>炭水化物(g)</th>
 			<th>タンパク質(g)</th>
@@ -51,6 +54,9 @@
 	
 	<br>
 	<table border="1" class="eiyou2">
+		<tr>
+			<th colspan="5" class="daimei">必要な栄養素</th>
+		</tr>
 		<tr>
 			<th>炭水化物(g)</th>
 			<th>タンパク質(g)</th>
