--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -67,7 +67,16 @@
 		</tr>
 	</table>
 	<div class="message">
-    <span class="box-title">Comment</span>
+    <span class="box-title">
+		<th:block th:each="c:${comments}">
+			[[${c}]]<br>
+		</th:block>
+		<th:block th:if="comment1">
+			[[${comment1}]]<br>
+			<span th:text="${comment2}"></span><br>
+			<span th:text="${comment3}"></span>
+		</th:block>
+	</span>
     <p><img th:src="${dataUri}"></p>
 	</div>
 </div>
