--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -20,6 +20,10 @@
 					<td><input type="text" name="name" th:value="${name}" required></td>
 				</tr>
 				<tr>
+					<th>カロリー(kcal)</th>
+					<td><input type="text" name="kcal" th:value="${kcal}" required></td>
+				</tr>
+				<tr>
 					<th>炭水化物(g)</th>
 					<td><input type="text" name="carbohydrates" th:value="${carbohydrates}" required></td>
 				</tr>
