--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -1,8 +1,9 @@
 <footer>
 	<hr>
-	<small>&copy; 健康管理サイト</small>
-	<div>
-	<a href="">ついった</a><img src="Twitter-Logo-2010.jpeg">
-	<a href="">いんすた</a><img src="Twitter-Logo-2010.jpeg">
+	<div class="sns">
+	<a href="https://twitter.com/IdnetOfficial"><img height="70px" width="170px"src="/css/img/img03_20210512.png" ></a>
+	<a href="https://twitter.com/IdnetOfficial"><img height="70px" width="170px" src="/css/img/img01_20210512.png"></a>
+	<a href="https://www.facebook.com/information.development.id"><img height="70px" width="170px" src="/css/img/img02_20210512.png"></a>
 	</div>
+		<small>&copy; 健康管理サイト</small>
 </footer>
