--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -11,7 +11,6 @@
 <body>
 		<header th:replace="header"></header>
 	<hr>
-	<div class="main">今日の栄養素計算表</div>
 	
 	<div class="line2">
 		<a href="/menu/add" >Myメニュー追加</a>
@@ -23,7 +22,7 @@
 	<div class="roll">
 	<table border="1" class="eiyou1" >
 		<tr>
-			<th colspan="6" class="daimei">今日の栄養素</th>
+			<th colspan="6" class="daimei">今日の栄養素計算表</th>
 		</tr>
 		<tr>
 			<th>食品名・材料</th>
