--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -44,7 +44,7 @@
 					<td><input type="text" name="mineral" th:value="${mineral}" required></td>
 				</tr>
 			</table>
-			<button>メニュー追加登録</button>
+			<button　class="tuika">メニュー追加登録</button>
 		</form>
 	</main>
 	<footer th:replace="footer"></footer>
