--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -13,23 +13,29 @@ footer{
 	font-size: 25px;
 	color: #F2F3F4;
 	background-color: #1F1E26;
-	height: 200px;
+	height: 170px;
+	position: relative;
+	bottom: 0;
 	}
+.sns a{
+	display: inline-block ;
+	margin:80px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
 /* ヘッダー、ナビゲーション内リンク */
 header a, nav a {
 	color: #4A4952;
 }
-header{
-	background-color: #F2F3F4;
-}
 /* ヘッダー内見出し */
+header span{
+	font-size: 25px;
+}
 header h1 {
-	padding: 0px;
 	text-align: left;
-	display: inline;
+	padding: 0px;
   	position: relative;
-  	font-size: 20pt;
-	text-align: left;		
+  	font-size: 25pt;		
   }
 /* 表線 */
 table, th, td {
@@ -39,7 +45,7 @@ table, th, td {
 }
 /* 表 */
 table {
-	font-size: 20px;
+	font-size: 25px;
 	margin: 0 auto;
 	background-color:#F2F3F4;
     min-width: 800px;
@@ -53,17 +59,24 @@ table th {
 }
 /* 送信ボタン */
 button {
+	font-size: 25px;
 	margin: 2px;
 	padding: 5px 20px;
-	background-color: #e5857b;
+	background-color: #A2D43D;
 	color: #ffffff;
 	border: none;
-	width:150px;
+	width:130px;
+	height: 50px;
 	cursor: pointer;
+	border-radius: 50px;
+}
+.hako{
+	height: 50px;
+	margin: 30px;
 }
 /* 送信ボタン(マウスオーバー時) */
 button:hover {
-	background-color: #f1b2b2;
+	background-color: #03C03C;
 }
 .btn-gradient-radius {
   display: inline-block;
@@ -85,44 +98,32 @@ button:hover {
 	 box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
 	background-color:#F2F3F4;
 	border:solid 1px #1F1E26;
-	border-radius: 20px;
+	border-radius: 30px;
 	text-decoration: none;
-	font-size: 20px;
+	font-size: 25px;
 	padding: 20px; 
-	 height: 20px;
-	width: 200px;
-	 margin: 15px;
+	 height: 25px;
+	width: 250px;
+	 margin: 10px;
 	display:inline-block;
 	font-weight: bold;
 }
-.main{
-	font-weight: bold;
-	 align-items: center;
-	display: inline-block;
-	font-size: 30px;
-  	 height: 10px;
-	width: 100%;
-	padding: 20px;
-	margin: 10ox;
-  	color: #454545;
-	background-color: #FFFFFF;
-	min-height: 50px;
-}
 .roll {
-	width: 43%;
+	width: 920px;
 	overflow-y: scroll; 
 	height: 400px;
+	margin-left: 40px;
 	margin-top: 30px;
-	margin-left:30px;
-	padding: 0px;
+	margin-bottom: 20px;
 }
 .eiyou1{
+	width: 900px;
 	margin-right: 0px; 
 }
 .eiyou2{
-	width: 40%;
-	margin-left: 70px;
-	margin-bottom: 30px;
+	width: 900px;
+	margin-left: 40px;
+	margin-bottom: 50px;
 }
 .daimei{
 	height: 70px;
@@ -300,29 +301,6 @@ button:hover {
     outline: 0;
     box-shadow: 0 0 0 2px rgb(33, 150, 243) inset;
 }
-
-/* おすすめ検索*/
-.recommend-choice {
-	width: 50%;
-	height: 700px;
-	margin: 0 auto;
-	margin-top: 50px;
-	margin-bottom: 50px;
-	background-color:#F2F3F4 ;
-	font-size:25px ;
-}
-.recommend-choice select{
-	margin:50px;
-	padding: auto;
-}
-.aaaa{
-	font-size: 20px;
-	padding: 5px;
-}
-.recommend{
-	font-size: 20px;
-	margin-bottom: 10px;
-}
 .account{
 	font-size: 25px;
 	height: 700px;
@@ -333,3 +311,27 @@ button:hover {
 account td{
 	width: 40%;
 }
+
+/* おすすめ検索*/
+.recommend-choice {
+	font-size:35px ;
+	height: 500px;
+	margin  : auto;
+}
+.kondate{
+
+	padding: 40px; 
+	 height: 25px;
+	width: 300px;
+	 margin: 40px;
+	display:inline-block;
+}
+.aaaa{
+	font-size: 25px;
+	padding: 5px;
+}
+.recommend{
+	font-size: 25px;
+	margin-bottom: 20px;
+}
+
