--- a/src/main/resources/templates/choice.html
+++ b/src/main/resources/templates/choice.html
@@ -9,7 +9,7 @@
 		<header th:replace="header"></header>
 	<main>
 		
-		<form action="/choice/search" method="get" class="text1"">
+		<form action="/choice/search" method="get" class="text1">
 			<input type="hidden" name="categoryId" th:value="${categoryId}">
 			<input type="text" name="keyword" th:value="${keyword}"><button>検索</button>
 		</form>
