よっしゃーーー

--- a/src/main/resources/templates/accountForm.html
+++ b/src/main/resources/templates/accountForm.html
@@ -62,7 +62,7 @@
 						<th:blovk>
 							<span style="color: red;" class="m">[[${message4}]]</span><br>
 						</th:blovk>
-						<select name="ageYear"  class="text2" th:value="ageYear">
+						<select name="birthyear"  class="text2" th:value="ageYear">
 							<Option value="0">ー</Option>
 							<Option value="1950">1950</Option>
 							<Option value="1951">1951</Option>
@@ -132,7 +132,7 @@
 							<Option value="2015">2015</Option>
 						</select>
 						年
-						<select name="ageMonth"  class="text2">
+						<select name="birthmonth"  class="text2">
 							<Option value="0">ー</Option>
 							<Option value="01">01</Option>
 							<Option value="02">02</Option>
@@ -148,7 +148,7 @@
 							<Option value="12">12</Option>
 						</select>
 						月
-						<select name="ageDay" class="text2">
+						<select name="birthday" class="text2">
 							<Option value="0">ー</Option>
 							<Option value="01">01</Option>
 							<Option value="02">02</Option>
