--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -17,35 +17,35 @@
 		<table border="1" class="3">
 				<tr>
 					<th>料理名/野菜名</th>
-					<td><input type="text" name="name" th:value="${name}" required></td>
+					<td><input type="text" name="name" th:value="${name}" required class="text3"></td>
 				</tr>
 				<tr>
 					<th>カロリー(kcal)</th>
-					<td><input type="text" name="kcal" th:value="${kcal}" required></td>
+					<td><input type="text" name="kcal" th:value="${kcal}" required class="text3"></td>
 				</tr>
 				<tr>
 					<th>炭水化物(g)</th>
-					<td><input type="text" name="carbohydrates" th:value="${carbohydrates}" required></td>
+					<td><input type="text" name="carbohydrates" th:value="${carbohydrates}" required class="text3"></td>
 				</tr>
 				
 				<tr>
 					<th>タンパク質(g)</th>
-					<td><input type="text" name="protein" th:value="${protein}" required></td>
+					<td><input type="text" name="protein" th:value="${protein}" required class="text3"></td>
 				</tr>
 				
 				<tr>
 					<th>脂質(g)</th>
-					<td><input type="text" name="lipid" th:value="${lipid}" required></td>
+					<td><input type="text" name="lipid" th:value="${lipid}" required class="text3"></td>
 				</tr>
 				
 				<tr>
 					<th>ビタミン(μg)</th>
-					<td><input type="text" name="vitamin" th:value="${vitamin}" required></td>
+					<td><input type="text" name="vitamin" th:value="${vitamin}" required class="text3"></td>
 				</tr>
 				
 				<tr>
 					<th>ミネラル(mg)</th>
-					<td><input type="text" name="mineral" th:value="${mineral}" required></td>
+					<td><input type="text" name="mineral" th:value="${mineral}" required class="text3"></td>
 				</tr>
 			</table>
 			<button　class="tuika">メニュー追加登録</button>
