--- a/src/main/resources/static/css/style1.css
+++ b/src/main/resources/static/css/style1.css
@@ -354,7 +354,7 @@ button:hover {
 .text1{
 	font-size: 20px;
     height: 40px;
-	width: 40%;
+	width: 200px;
     padding: 0 16px;
     border-radius: 4px;
     border: none;
@@ -367,7 +367,7 @@ button:hover {
 .text2{
 	font-size: 20px;
     height: 40px;
-	width: 20%;
+	width: 200px;
     padding: 0 16px;
     border-radius: 4px;
     border: none;
