--- a/src/main/resources/static/css/style1.css
+++ b/src/main/resources/static/css/style1.css
@@ -19,8 +19,9 @@ footer{
 	}
 .login-area{
 /*	background-color: #6FAD48;*/
-	margin: auto;
-	margin-top: 100px;
+/*	margin:auto;*/
+	margin-top: 170px;
+	margin-left: 37%;
 	border:solid 3px;
 	color:ivory;
 	width: 400px;
