--- a/src/main/resources/templates/recommend.html
+++ b/src/main/resources/templates/recommend.html
@@ -15,7 +15,7 @@
 		
 	<div class="recommend-choice">
 	<div class="kondate">
-	食べたいジャンル<br>
+	ジャンル<br>
 	<select name="genre" class="aaaa">
 		<option value="01">こだわらない</option>
 		<option value="02">和食</option>
@@ -26,7 +26,7 @@
 	
 
 	<div class="kondate">
-	食べたいもの<br>
+	味付け<br>
 	<select name="type" class="aaaa">
 		<option value="11">こだわらない</option>
 		<option value="12">あっさり</option>
@@ -35,7 +35,7 @@
 	</div>
 
 	<div class="kondate">
-	献立種類<br>
+	献立の種類<br>
 	<select name="sort" class="aaaa">
 		<option value="21">カロリー低めの献立</option>
 		<option value="22">一人暮らしの献立</option>
